@@ -17,6 +17,7 @@
  - (dtucker) [openbsd-compat/{LOTS}] Move the "OPENBSD ORIGINAL" markers to
    after the copyright notices.  Having them at the top next to the CVSIDs
    guarantees a conflict for each and every sync.
+ - (dtucker) [openbsd-compat/strlcpy.c] Update from OpenBSD 1.8 -> 1.10.
 
 20051105
  - (djm) OpenBSD CVS Sync
@@ -3259,4 +3260,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3962 2005/11/10 05:18:56 dtucker Exp $
+$Id: ChangeLog,v 1.3963 2005/11/10 05:26:17 dtucker Exp $
